--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="@dimen/dimens_20"
         android:layout_marginStart="@dimen/dimens_5"
-        tools:text="@string/exchange_rate_value"
+        tools:text="@string/uah_amount"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_14"
         android:layout_height="wrap_content"/>
@@ -65,7 +65,7 @@
         android:id="@+id/barrier"
         app:layout_constraintTop_toBottomOf="@+id/exchange_rate_title_tv"
         android:layout_margin="@dimen/dimens_20"
-        android:background="@color/grey"
+        android:background="@color/grey_4"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimens_1"/>
 
