--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey">#999999</color>
     <color name="grey_2">#FAFAFA</color>
     <color name="grey_3">#F6F8F8</color>
+    <color name="grey_4">#C8CFCF</color>
     <color name="red">#FF0000</color>
     <color name="green">#459E3C</color>
 </resources>
